--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                                     <td
                                       style="
                                         text-align: center;
-                                        padding: 20px 0px 8px 0px;
+                                        padding: 20px 0px 45px 0px;
                                       "
                                     >
                                       <a
@@ -744,7 +744,7 @@
                                     <td
                                       height="1"
                                       style="
-                                        background-color: #ccc;
+                                        background-color: #333333;
                                         width: 350px;
                                         max-width: 100%;
                                       "
